2002-05-08  Peter Stephenson  <pws@csr.com>

	* Unposted: Src/Modules/zselect.c: remove an unused counter.

	* 17095: Src/Modules/zselect.c: wrong index when appending to a
	value with zselect -A assoc.

	* 17081: Src/Modules/zselect.c, Src/Modules/zselect.mdd,
	Doc/Zsh/mod_zselect.yo:  zsh/zselect module provides zselect
	builtin as front-end to select system call.

2002-05-08  Andrej Borsenkow  <bor@zsh.org>

	* 17080: Doc/Zsh/compsys.yo: clarify tag-order style usage

	* 17076: Completion/Redhat/Command/.distfiles,
	Completion/Redhat/Command/_service, Completion/Unix/Command/_chkconfig,
	Completion/Unix/Command/_init_d, Completion/Unix/Type/.distfiles,
	Completion/Unix/Type/_services: use new helper _services to complete
	init/xinetd services; make chkconfig use it; completion of
	service command

	* 17075: Completion/Mandrake/Command/_urpmi: _urpmi
	completion update

	* 17074: Completion/Linux/Command/.distfiles,
	Completion/Linux/Command/_mondo, Src/Zle/complete.mdd:
	mondoarchive completion (with typo correction from Bart)

	* unposted: .cvsignore: add autom4te.cache. Looks like
	autoconf-2.53 generates it for whatever reason

2002-05-06  Sven Wischnowsky  <wischnow@zsh.org>

	* 17078: Completion/Base/Utility/_describe: fix _arguments' -s
	option

2002-05-04  Bart Schaefer  <schaefer@zsh.org>

	* 16613 (modified): acconfig.h, zshconfig.ac, Src/init.c: detect
	variant tgetent() return value and test for it correctly.

	* unposted; based on 16032: Src/exec.c, Src/glob.c, Src/subst.c:
	split tokenize() into a second function shtokenize() and a static
	function zshtokenize() which implements both of them; tokenize()
	ignores SH_GLOB, shtokenize() respects it.
	
	* unposted: Doc/Zsh/options.yo: explain the effect of unreadable
	directories in PATH, etc., on the CORRECT option.

2002-05-03  Oliver Kiddle  <opk@zsh.org>

	* 17072; based on 17066 (Danek Duvall):
	Completion/Unix/Type/_path_files: correct handling of pushdminus